tried to fix spacing issues at top of nav bar, didn't work.  Adjusted a few things on the index.html file so that it looks better.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,23 @@
 
 /* All HTML pages */
+
 body {
-    font-size: 18px;
-    line-height: 34px;
+    font-size: 20px;
+    line-height: 30px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     background: url(../images/full_bloom.png);
 }
 *{
     box-sizing: border-box;
+    
 }
 
 .container {
-    width: 100%;
     max-width: 960px;
+    width: 100%;
     margin: 0 auto;
     clear: both;
+    
 }
 
 h1, h3, p {
@@ -32,48 +35,50 @@ h1, h3 {
 }
 
 h1 {
-    font-size: 30px;
-    line-height: 49px;
+    font-size: 35px;
+    line-height: 20px;
     border-bottom: 3px solid #dddddd;
     padding-bottom: 20px;
 }
 
 h3 {
-    font-size: 22px;
-    /*padding-bottom: 20px;
+    font-size: 20px;
+    padding-bottom: 20px;
     margin-bottom: 15px;
     line-height: 22px;
-    border-bottom: 2px solid #eeeeee;*/
+    border-bottom: 2px solid #eeeeee;
 }
 
 #mast {
+    position: relative;
+    top: 0;
     background: #ffffff;
     margin: 0 0 30px;
     z-index: 99;
     color: #ffffff;
     overflow: auto;
     border-bottom: 2px solid #cccccc;
-    position: fixed;
     width: 100%;
+    
 }
 
 #logo {
-    width: 250px;
+    width: 275px;
     height: 90px;
     background: #4aaaa5;
     float: left;
     font-family: 'Georgia', Times, Times New Roman, serif;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     line-height: 90px;
     color: #ffffff;
-    font-weight: 700;
+    font-weight: 650;
     text-decoration: none;
 }
 
 nav {
     float: right;
-    margin: 25px;
+    margin: 30px;
 }
 
 nav a {
@@ -91,40 +96,31 @@ nav a:first-child {
 }
 
 footer {
-    /*position: fixed;*/
-    /*left: 0;*/
-    /*bottom: 0;*/
-    /*width: 100%;*/
-    /*text-align: center;*/
+    width: 100%;
     padding: 30px 0;
     clear: both;
-    font-size: 12px;
-    /*color: #ffffff;*/
+    font-size: 15px;
     color: #cccccc;
     text-align: center;
     background: #666666;
-    border-top: 8px solid #4aaaa5;
-    height: 50px;
+    border-top: 10px solid #4aaaa5;
+    height: 25px;
 }
 
-h3 {
-    padding-bottom: 20px;
-    margin-bottom: 15px;
-    line-height: 22px;
-    border-bottom: 2px solid #eeeeee;
-}
 
 #main-container {
     padding-top: 130px;
-    min-height: calc(100vh-70px);
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    clear: both;
 }
 
 .main-section {
     background: #ffffff;
-    padding: 30px;
+    padding: 40px;
     margin: 0 0 40px;
-    width: 100%;
-    max-width: 960px;
+    width: 960px;
     float: left;
     border: 1px solid #dddddd;
 }
@@ -140,7 +136,7 @@ p {
     color:  #777777;
 }
 
-/* Portfolio Page */
+/* Portfolio */
 
 .work {
     position: relative;
@@ -156,8 +152,6 @@ p {
 
 .work img {
     width: 100%;
-    border: 0 none;
-    opacity: 0.8;
 }
 
 .work h3 {
